// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Abridged rendering of uninteresting keys (hiding Other) 1`] = `
"
{
  \\"Other\\": { ... },
!! Expected Balue but received Value
  \\"Value\\": \\"Value\\"
}"
`;

exports[`Abridged rendering of uninteresting keys (showing Other) 1`] = `
"
{
  \\"Other\\": { \\"OneKey\\": \\"Visible\\" },
!! Expected Balue but received Value
  \\"Value\\": \\"Value\\"
}"
`;

exports[`ArrayWith matcher 1`] = `
"Most entries should be collapsed but at least one should for a deep comparison
{
  \\"List\\": [
!!   Could not match arrayWith pattern 0. This is the closest match
    {
      \\"MakeItBig\\": true,
!!     Expected 5 but received 1
      \\"Value\\": \\"1\\"
    },
    { ... },
    { ... },
    { ... }
  ]
}"
`;

exports[`ArrayWith out-of-order match 1`] = `
"
[
  5,
!! arrayWith pattern 0 matched here
  3
!! Could not match arrayWith pattern 1. No more elements to try
  
]"
`;

exports[`ArrayWith partial match 1`] = `
"Most entries should be collapsed but at least one should for a deep comparison, and should show a place for previous matches
{
  \\"List\\": [
    { ... },
!!   arrayWith pattern 0 matched here
    {
      \\"MakeItBig\\": true,
      \\"Value\\": \\"2\\"
    },
!!   Could not match arrayWith pattern 1. This is the closest match
    {
      \\"MakeItBig\\": true,
!!     Expected 5 but received 3
      \\"Value\\": \\"3\\"
    },
    { ... }
  ]
}"
`;

exports[`Deep Match.objectLike with mismatched string value 1`] = `
"
{
  \\"Deep\\": {
    \\"Other\\": \\"Other\\",
!!   Expected Value but received Balue
    \\"Value\\": \\"Balue\\"
  }
}"
`;

exports[`Encodedjson matcher 1`] = `
"
{
!! Encoded JSON value does not match
  \\"Json\\": \\"{\\\\\\"Value\\\\\\":\\\\\\"Value\\\\\\"}\\" <*> {
!!   Expected Balue but received Value
    \\"Value\\": \\"Value\\"
  }
}"
`;

exports[`Match.objectEquals with missing key 1`] = `
"
{
!! Missing key 'Value'
  \\"Value\\": undefined
}"
`;

exports[`Match.objectEquals with unexpected key 1`] = `
"
{
!! Unexpected key Other
  \\"Other\\": \\"Other\\",
  \\"Value\\": \\"Value\\"
}"
`;

exports[`Match.objectLike looking for absent key 1`] = `
"
{
!! Received Value, but key should be absent
  \\"Value\\": \\"Value\\"
}"
`;

exports[`Match.objectLike with mismatched string value 1`] = `
"
{
  \\"Other\\": \\"Other\\",
!! Expected Value but received Balue
  \\"Value\\": \\"Balue\\"
}"
`;
